sewer/ castle update
material updates, lighting tweaks, interactable bp

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -206,7 +206,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Castle
+LastLevel=/Game/Levels/NewSewer
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -219,26 +219,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Tower_texture_final_03_Mat_Inst
-MRUItem1=/Game/Tower_texture_final_03_Mat
-MRUItem2=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
-MRUItem3=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor
-MRUItem4=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst1
-MRUItem5=/Game/Tower/mat_Tower_Inst
-MRUItem6=/Game/Castle/Castle_Level/Castle_Level_Materials/Ceiling_Dining1
-MRUItem7=/Game/Castle/Castle_Level/Castle_Level_Materials/lambert10
-MRUItem8=/Game/Castle/Castle_Level/Castle_Level_Materials/Stairs5
-MRUItem9=/Game/Castle/Castle_Level/Castle_Level_Materials/lambert9
-MRUItem10=/Game/Castle/Castle_Level/Castle_Level_Materials/Floor_Courtyard1
-MRUItem11=/Game/Castle/Castle_Level/Castle_Level_Materials/Floor_Dining1
-MRUItem12=/Game/Castle/Castle_Level/Castle_Level_Materials/Walls1
-MRUItem13=/Game/Castle/Castle_Level/Castle_Level_Materials/Wall
-MRUItem14=/Game/Castle/Castle_Level/Castle_Level_Materials/lambert8
-MRUItem15=/Game/Castle/Castle_Level/Castle_Level_Materials/Roof
-MRUItem16=/Game/Castle/Castle_Level/Castle_Level_Materials/blinn1
-MRUItem17=/Game/Castle/Castle_Level/Castle_Level_Materials/lambert7
-MRUItem18=/Game/Castle/Castle_Level/Castle_Level_Materials/lambert1
-MRUItem19=/Game/Blueprints/Testing/disappear_cube_blueprint
+MRUItem0=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall_Inst
+MRUItem1=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
+MRUItem2=/Game/Levels/NewSewer
+MRUItem3=/Game/Player/ThirdPersonCharacter
+MRUItem4=/Game/Blueprints/Testing/disappear_cube_blueprint
+MRUItem5=/Game/StarterContent/Blueprints/Blueprint_WallSconce
+MRUItem6=/Game/Castle_Level_Group_Castle_Level_FIRST
+MRUItem7=/Game/Castle_Level_Group_Castle_Level_LAST
+MRUItem8=/Game/Castle_Level_Group_Castle_Level_MIDDLE
+MRUItem9=/Game/Castle_Level_Group_Ceiling_Dining
+MRUItem10=/Game/SM_MERGED_Castle_Level_Group_Ceiling_Dining_11
+MRUItem11=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst2
+MRUItem12=/Game/Ceiling_Hall
+MRUItem13=/Game/Bridge_Hall
+MRUItem14=/Game/Walls_Hall
+MRUItem15=/Game/Floor_Hall
+MRUItem16=/Game/Ceiling_Final
+MRUItem17=/Game/Floor_Final
+MRUItem18=/Game/Walls_Final
+MRUItem19=/Game/Wall
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2975,10 +2975,15 @@ DialogueWidget_C.Private=True
 DialogueWidget_C.Constants=True
 MapBuildDataRegistry.Lighting=True
 disappear_cube_blueprint_C.Default=True
+SpotLightComponent.Variable=True
+SpotLightComponent.Sockets=True
+SpotLightComponent.ComponentTick=True
+SpotLightComponent.ComponentReplication=True
+SpotLightComponent.Events=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
@@ -3027,10 +3032,10 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -3043,8 +3048,8 @@ Widget=
 Visual=
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-StaticMeshComponent=
-MeshComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
@@ -3055,7 +3060,7 @@ SkeletalBodySetup="\"Object.AggGeom\" \"Object.AggGeom.SphylElems\" \"Object.Agg
 BodySetup=
 BodySetupCore=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
-SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMesh=
 MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Material.ScalarParameters.ScalarParameters[1]\" \"Object.Material.ScalarParameters.ScalarParameters[2]\" "
 AnimGraphNode_SequencePlayer="\"Object.Settings.SyncGroup\" "
@@ -3146,10 +3151,11 @@ ParticleSystemComponent="\"Object.Lighting.LightingChannels\" "
 FXSystemComponent="\"Object.Lighting.LightingChannels\" "
 MaterialExpressionTextureSampleParameter2D="\"Object.ChannelNames\" "
 MaterialExpressionTextureSampleParameter="\"Object.ChannelNames\" "
-MaterialExpressionTextureSample="\"Object.ChannelNames\" "
-MaterialExpressionTextureBase="\"Object.ChannelNames\" "
+MaterialExpressionTextureSample=
+MaterialExpressionTextureBase=
 ElliotWidget_C="\"Object.IsColored\" "
 disappear_cube_blueprint_C=
+Blueprint_WallSconce_C="\"Object.Active\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -3679,6 +3685,14 @@ None=======
 /Game/Castle/Castle_Level/Castle_Level_Materials/lambert10.lambert10=1
 /Game/Castle/Castle_Level/Castle_Level_Materials/Ceiling_Dining1.Ceiling_Dining1=1
 /Game/Tower_texture_final_03_Mat_Inst.Tower_texture_final_03_Mat_Inst=1
+/Game/Blueprints/Testing/Materials/Disappear.Disappear=1
+/Game/SM_MERGED_Castle_Level_Group_Ceiling_Dining_11.SM_MERGED_Castle_Level_Group_Ceiling_Dining_11=1
+/Game/Wall.Wall=1
+/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst2.MM_Sewer_Floor_Inst2=1
+/Game/Castle_Level_Group_Castle_Level_FIRST.Castle_Level_Group_Castle_Level_FIRST=1
+/Game/Castle_Level_Group_Ceiling_Dining.Castle_Level_Group_Ceiling_Dining=1
+/Game/Castle_Level_Group_Castle_Level_MIDDLE.Castle_Level_Group_Castle_Level_MIDDLE=1
+/Game/Castle_Level_Group_Castle_Level_LAST.Castle_Level_Group_Castle_Level_LAST=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3744,7 +3758,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=319.000 Y=0.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1620.000 Y=984.000
+WindowSize=X=1625.000 Y=989.000
 None=======
 InitiallyMaximized=True
 
@@ -5334,11 +5348,11 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Castle
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Levels/Bubbleopolis
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/Levels/NewSewer
+MRUItem0=/Game/Levels/NewSewer
+MRUItem1=/Game/Levels/Castle
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/Levels/Bubbleopolis
+MRUItem4=/Game/Levels/MainMenu
 MRUItem5=/Game/Levels/PersistentLevel
 MRUItem6=/Game/Levels/NewMap
 MRUItem7=/Game/Movies/CutsceneLvl2
@@ -5349,7 +5363,7 @@ MRUItem11=/Game/Levels/testYellow
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LightingResults
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -5781,28 +5795,30 @@ Mechanic_Test_C=
 WriteText_2=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 WriteText=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 ElliotWidget_C=
+Blueprint_WallSconce_C=
+LightComponentBase=
 
 [PlacementMode]
-RecentlyPlaced=/Game/Tower_texture_final_03_Mat_Inst.Tower_texture_final_03_Mat_Inst;
-RecentlyPlaced=/Game/Tower_texture_final_03_Mat.Tower_texture_final_03_Mat;
+RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall.MM_Sewer_Wall;
+RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall_Inst.MM_Sewer_Wall_Inst;
+RecentlyPlaced=/Game/Blueprints/Pickups/LightPickupActor_Blueprint.LightPickupActor_Blueprint;
+RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_WallSconce.Blueprint_WallSconce;
+RecentlyPlaced=/Game/Castle_Level_Group_Ceiling_Dining.Castle_Level_Group_Ceiling_Dining;
+RecentlyPlaced=/Game/Castle_Level_Group_Castle_Level_MIDDLE.Castle_Level_Group_Castle_Level_MIDDLE;
+RecentlyPlaced=/Game/Castle_Level_Group_Castle_Level_LAST.Castle_Level_Group_Castle_Level_LAST;
+RecentlyPlaced=/Game/Castle_Level_Group_Castle_Level_FIRST.Castle_Level_Group_Castle_Level_FIRST;
+RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst2.MM_Sewer_Floor_Inst2;
 RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor.MM_Sewer_Floor;
-RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst1.MM_Sewer_Floor_Inst1;
 RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst.MM_Sewer_Floor_Inst;
+RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst1.MM_Sewer_Floor_Inst1;
+RecentlyPlaced=/Game/Tower_texture_final_03_Mat_Inst.Tower_texture_final_03_Mat_Inst;
+RecentlyPlaced=/Game/Tower_texture_final_03.Tower_texture_final_03;
+RecentlyPlaced=/Game/SM_MERGED_Castle_Level_Group_Ceiling_Dining_11.SM_MERGED_Castle_Level_Group_Ceiling_Dining_11;
+RecentlyPlaced=/Game/Tower_texture_final_03_Mat.Tower_texture_final_03_Mat;
 RecentlyPlaced=/Game/Blueprints/Testing/disappear_cube_blueprint.disappear_cube_blueprint;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Player/ThirdPersonCharacter.ThirdPersonCharacter;
 RecentlyPlaced=/Game/Castle/Castle_Level/Castle_Level_FULL.Castle_Level_FULL;
-RecentlyPlaced=/Game/Bubble_Gate/Bubble_Gate_LP__1_.Bubble_Gate_LP__1_;
-RecentlyPlaced=/Game/LadderClimb/Ladder_BP.Ladder_BP;
-RecentlyPlaced=/Game/Blueprints/PLant.PLant;
-RecentlyPlaced=/Game/Sewer/Lever.Lever;
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Game/Castle/Castle_Level/Castle_Level_FULL_TEMP.Castle_Level_FULL_TEMP;
-RecentlyPlaced=/Game/BubbleGang/Boys/ManBPs/BubbleMan_BP.BubbleMan_BP;
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
-RecentlyPlaced=/Game/BubbleGang/Boys/WalkingBubbleMan_Anim_mixamo_com.WalkingBubbleMan_Anim_mixamo_com;
-RecentlyPlaced=/Game/BubbleGang/Girls/BubbleGirl_BPS/BubbleGirl_BP.BubbleGirl_BP;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
@@ -5845,6 +5861,7 @@ SkeletalMeshComponent.Rendering=True
 StaticMesh.LODCustomMode=False
 StaticMesh.StaticMesh=True
 MaterialEditorInstanceConstant.General=True
+DirectionalLight.Light=True
 
 [FEditorModeTools]
 CoordSystem=1
@@ -5896,6 +5913,7 @@ None=======
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
