--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -206,7 +206,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/NewSewer
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -219,26 +219,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall_Inst
-MRUItem1=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
-MRUItem2=/Game/Levels/NewSewer
-MRUItem3=/Game/Player/ThirdPersonCharacter
-MRUItem4=/Game/Blueprints/Testing/disappear_cube_blueprint
-MRUItem5=/Game/StarterContent/Blueprints/Blueprint_WallSconce
-MRUItem6=/Game/Castle_Level_Group_Castle_Level_FIRST
-MRUItem7=/Game/Castle_Level_Group_Castle_Level_LAST
-MRUItem8=/Game/Castle_Level_Group_Castle_Level_MIDDLE
-MRUItem9=/Game/Castle_Level_Group_Ceiling_Dining
-MRUItem10=/Game/SM_MERGED_Castle_Level_Group_Ceiling_Dining_11
-MRUItem11=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst2
-MRUItem12=/Game/Ceiling_Hall
-MRUItem13=/Game/Bridge_Hall
-MRUItem14=/Game/Walls_Hall
-MRUItem15=/Game/Floor_Hall
-MRUItem16=/Game/Ceiling_Final
-MRUItem17=/Game/Floor_Final
-MRUItem18=/Game/Walls_Final
-MRUItem19=/Game/Wall
+MRUItem0=/Game/Blueprints/Testing/Materials/Disappear
+MRUItem1=/Game/Blueprints/Testing/disappear_cube_blueprint
+MRUItem2=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall_Inst
+MRUItem3=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
+MRUItem4=/Game/Levels/NewSewer
+MRUItem5=/Game/Player/ThirdPersonCharacter
+MRUItem6=/Game/StarterContent/Blueprints/Blueprint_WallSconce
+MRUItem7=/Game/Castle_Level_Group_Castle_Level_FIRST
+MRUItem8=/Game/Castle_Level_Group_Castle_Level_LAST
+MRUItem9=/Game/Castle_Level_Group_Castle_Level_MIDDLE
+MRUItem10=/Game/Castle_Level_Group_Ceiling_Dining
+MRUItem11=/Game/SM_MERGED_Castle_Level_Group_Ceiling_Dining_11
+MRUItem12=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst2
+MRUItem13=/Game/Ceiling_Hall
+MRUItem14=/Game/Bridge_Hall
+MRUItem15=/Game/Walls_Hall
+MRUItem16=/Game/Floor_Hall
+MRUItem17=/Game/Ceiling_Final
+MRUItem18=/Game/Floor_Final
+MRUItem19=/Game/Walls_Final
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2983,7 +2983,7 @@ SpotLightComponent.Events=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
@@ -2994,7 +2994,7 @@ Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
-Info="\"Object.Light.LightComponent.Object.Light.LightColor\" "
+Info="\"Object.Lightmass.LightmassSettings\" "
 None=======
 None=======
 None=======
@@ -3033,9 +3033,9 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -3048,8 +3048,8 @@ Widget=
 Visual=
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshComponent=
+MeshComponent=
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
@@ -5913,7 +5913,6 @@ None=======
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
