--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,7 +153,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Sewer
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -175,7 +175,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.000000
+ContentBrowserTab1.ThumbnailSizeScale=0.196429
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -206,7 +206,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/NewSewer
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -219,11 +219,11 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Testing/Materials/Disappear
-MRUItem1=/Game/Blueprints/Testing/disappear_cube_blueprint
-MRUItem2=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall_Inst
-MRUItem3=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
-MRUItem4=/Game/Levels/NewSewer
+MRUItem0=/Game/Levels/NewSewer
+MRUItem1=/Game/Blueprints/Testing/Materials/Disappear
+MRUItem2=/Game/Blueprints/Testing/disappear_cube_blueprint
+MRUItem3=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall_Inst
+MRUItem4=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall
 MRUItem5=/Game/Player/ThirdPersonCharacter
 MRUItem6=/Game/StarterContent/Blueprints/Blueprint_WallSconce
 MRUItem7=/Game/Castle_Level_Group_Castle_Level_FIRST
@@ -3777,7 +3777,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia Game/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -5363,7 +5363,7 @@ MRUItem11=/Game/Levels/testYellow
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=PIE
+LastLogListing=LoadErrors
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
