--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/Niagara.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/Niagara.ini
@@ -6,5 +6,5 @@ bResetSimulationOnChange=True
 bResimulateOnChangeWhilePaused=True
 bResetDependentSystemsWhenEditingEmitters=False
 bDisplayAdvancedParameterPanelCategories=False
-NewAssetDialogConfigMap=(("NiagaraEmitter", ()),("NiagaraSystem", ()))
+NewAssetDialogConfigMap=(("NiagaraEmitter", (SelectedOptionIndex=1)),("NiagaraSystem", ()))
 
