--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,7 +153,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/UI/Widgets
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -215,31 +215,30 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/HUD7.HUD7
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/UI/Widgets/HUD7
-MRUItem1=/Game/Blueprints/UI/Widgets/BubCollectibles
-MRUItem2=/Game/Blueprints/UI/Widgets/ColorWheelHud
-MRUItem3=/Game/Player/ThirdPersonCharacter
-MRUItem4=/Game/BubbleopolisBPs/RedCamera
-MRUItem5=/Game/BubbleopolisBPs/MagCamera
-MRUItem6=/Game/BubbleopolisBPs/BlueCamera
-MRUItem7=/Game/BubbleopolisBPs/GreenCamera
-MRUItem8=/Game/BubbleopolisBPs/YellowLightBulb
-MRUItem9=/Game/BubbleopolisBPs/BluePropeller
-MRUItem10=/Game/BubbleopolisBPs/GreenKey
-MRUItem11=/Game/BubbleopolisBPs/MagSoap
-MRUItem12=/Game/BubbleopolisBPs/RedGas
-MRUItem13=/Game/Geometry/Meshes/Plants/ReactivePlant
-MRUItem14=/Game/Blueprints/UI/Widgets/HUD6
-MRUItem15=/Game/Blueprints/UI/HUD7_nowheel
-MRUItem16=/Game/Levels/Bubbleopolis
-MRUItem17=/Game/Levels/NewSewer
-MRUItem18=/Game/Blueprints/Testing/Materials/Disappear
-MRUItem19=/Game/Blueprints/Testing/disappear_cube_blueprint
+MRUItem0=/Game/Sounds/FX/FX_PaverStep_R
+MRUItem1=/Game/Sounds/FX/FX_PaverStep_L
+MRUItem2=/Game/Materials/PM_Paver
+MRUItem3=/Game/Bridge/materials/lambert2
+MRUItem4=/Game/Drawbridge/lambert25
+MRUItem5=/Game/Materials/Mat_Island6
+MRUItem6=/Game/Materials/Mat_Island5
+MRUItem7=/Game/StarterContent/Materials/M_CobbleStone_Smooth
+MRUItem8=/Game/Materials/Mat_Island4
+MRUItem9=/Game/Materials/Mat_Island2
+MRUItem10=/Game/Player/Player_BP
+MRUItem11=/Game/Animation/Character/Walking_Anim_mixamo_com
+MRUItem12=/Game/Materials/Mat_Island3
+MRUItem13=/Game/Bridge/Blueprints/DisappearBridge
+MRUItem14=/Game/Materials/Mat_Island1
+MRUItem15=/Game/Player/ThirdPersonCharacter
+MRUItem16=/Game/Materials/PM_Grass
+MRUItem17=/Game/Blueprints/UI/Widgets/HUD7
+MRUItem18=/Game/Blueprints/UI/Widgets/BubCollectibles
+MRUItem19=/Game/Blueprints/UI/Widgets/ColorWheelHud
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -3123,17 +3122,23 @@ BubCollectibles_C.Accessibility=True
 BubCollectibles_C.Clipping=True
 BubCollectibles_C.Navigation=True
 BubCollectibles_C.Localization=True
+PhysicalMaterial.PhysicalMaterial=True
+PhysicalMaterial.Advanced=True
+PhysicalMaterial.Destruction=True
+PhysicalMaterial.PhysicalProperties=True
+MaterialExpressionLandscapePhysicalMaterialOutput.PhysicalMaterial=True
+MaterialExpressionLandscapePhysicalMaterialOutput.MaterialExpression=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object=
+Object="\"Object.Voice Management.Voice Management|Concurrency\" \"Object.Voice Management.Voice Management|Priority\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-ThirdPersonCharacter_C="\"Object.GotBlue\" "
+ThirdPersonCharacter_C=
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Character="\"Object.Default.Destinations\" "
+Character=
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Pawn="\"Object.Default.Destinations\" "
+Pawn=
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
@@ -3174,11 +3179,11 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
-BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -3255,10 +3260,10 @@ PlayerController=
 Controller=
 PaperSprite="\"Object.Sprite.SourceUV\" "
 SoundCue="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
-SoundBase="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
+SoundBase="\"Object.Voice Management.Voice Management|Concurrency\" \"Object.Voice Management.Voice Management|Priority\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" \"Object.ChannelNames\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
-MaterialExpression=
+MaterialExpression="\"Object.Inputs\" "
 MaterialEditorInstanceConstant=
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 NewSewer_C=
@@ -3301,6 +3306,8 @@ disappear_cube_blueprint_C=
 Blueprint_WallSconce_C="\"Object.Active\" "
 ReactivePlant_C=
 BubCollectibles_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+MaterialExpressionLandscapePhysicalMaterialOutput="\"Object.Inputs\" "
+MaterialExpressionCustomOutput="\"Object.Inputs\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -3850,6 +3857,18 @@ None=======
 /Game/BubbleopolisBPs/RedCamera.RedCamera=1
 /Game/Blueprints/UI/Widgets/ColorWheelHud.ColorWheelHud=1
 /Game/Blueprints/UI/Widgets/BubCollectibles.BubCollectibles=1
+/Game/Materials/PM_Grass.PM_Grass=1
+/Game/Materials/PM_Paver.PM_Paver=1
+/Game/Animation/Character/Walking_Anim_mixamo_com.Walking_Anim_mixamo_com=1
+/Game/Materials/Mat_Island1.Mat_Island1=1
+/Game/Materials/Mat_Island3.Mat_Island3=1
+/Game/Materials/Mat_Island4.Mat_Island4=1
+/Game/Materials/Mat_Island2.Mat_Island2=1
+/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth=1
+/Game/Materials/Mat_Island6.Mat_Island6=1
+/Game/Drawbridge/lambert25.lambert25=1
+/Game/Sounds/FX/FX_PaverStep_L.FX_PaverStep_L=1
+/Game/Sounds/FX/FX_PaverStep_R.FX_PaverStep_R=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3917,7 +3936,7 @@ ScreenPosition=X=214.000 Y=35.000
 WindowSize=X=1305.000 Y=745.000
 WindowSize=X=1625.000 Y=989.000
 None=======
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3934,7 +3953,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../../RobinDocs/GameDev/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -5341,11 +5360,11 @@ SceneOutliner.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2021.02.03-03.51.48
 HierarchicalLODOutliner.TimeStamp=2021.03.22-23.03.37
 HierarchicalLODOutliner.LastCompileMethod=External
-BlueprintGraph.TimeStamp=2021.02.15-00.29.01
+BlueprintGraph.TimeStamp=2021.03.22-23.03.17
 BlueprintGraph.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2021.02.15-00.29.54
+SequencerWidgets.TimeStamp=2021.03.22-23.03.59
 SequencerWidgets.LastCompileMethod=External
-ExternalImagePicker.TimeStamp=2021.02.15-00.29.22
+ExternalImagePicker.TimeStamp=2021.03.22-23.03.33
 ExternalImagePicker.LastCompileMethod=External
 Voice.TimeStamp=2021.03.22-23.04.10
 Voice.LastCompileMethod=External
@@ -5483,12 +5502,12 @@ GooglePADEditor.TimeStamp=2021.03.22-23.34.27
 GooglePADEditor.LastCompileMethod=External
 TextureEditor.TimeStamp=2021.03.22-23.04.04
 TextureEditor.LastCompileMethod=External
-SkeletonEditor.TimeStamp=2021.02.11-02.29.36
+SkeletonEditor.TimeStamp=2021.03.22-23.04.01
 SkeletonEditor.LastCompileMethod=External
-PinnedCommandList.TimeStamp=2021.02.11-02.29.30
+PinnedCommandList.TimeStamp=2021.03.22-23.03.52
 PinnedCommandList.LastCompileMethod=External
-AnimationEditor.TimeStamp=2021.02.09-23.59.10
-AnimationEditor.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2021.03.22-23.03.12
+AnimationEditor.LastCompileMethod=External
 PhysicsAssetEditor.TimeStamp=2021.02.11-02.29.30
 PhysicsAssetEditor.LastCompileMethod=External
 LauncherServices.TimeStamp=2021.02.05-04.34.16
@@ -5505,8 +5524,8 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/Bubbleopolis
 MRUItem2=/Game/Levels/NewSewer
 MRUItem3=/Game/Levels/Castle
 MRUItem4=/Game/Levels/MainMenu
@@ -5520,7 +5539,7 @@ MRUItem11=/Game/Levels/testYellow
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LoadErrors
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -5836,7 +5855,7 @@ NiagaraEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Inpu
 SteamVREditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
 StaticMeshComponent=
-SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
+SceneComponent=
 Drawbridge_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
 CapsuleComponent=
 SkeletalMeshComponent=
@@ -5923,7 +5942,7 @@ Sewer_Ground_WATER__1__Blueprint_C=Sewer_Ground_WATER__1__Blueprint_C.Collision.
 NewPlayerController_C=
 StaircaseBP_C=Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,
 DisappearBridge1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
-DisappearBridge_C=
+DisappearBridge_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 RedPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 gatee_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 NewSewer_C=
@@ -6075,6 +6094,7 @@ None=======
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
