Code for Bubble Character
Code for Bubble Character

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -206,7 +206,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Castle
+LastLevel=/Game/Levels/Bubbleopolis
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -215,33 +215,32 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Castle/CannonCastle.CannonCastle
-OpenAssetsAtExit=/Game/Player/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Castle/Cannonball.Cannonball
+OpenAssetsAtExit=/Game/BubbleGang/Boys/ManBPs/BubbleMan_BP.BubbleMan_BP
+OpenAssetsAtExit=/Game/Dialogue/DialogueWidget.DialogueWidget
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Castle/Cannonball
-MRUItem1=/Game/Player/ThirdPersonCharacter
-MRUItem2=/Game/Castle/CannonCastle
-MRUItem3=/Game/Levels/Castle
-MRUItem4=/Game/Levels/Forest
-MRUItem5=/Game/Blueprints/Pickups/PinkPickup_Actor
-MRUItem6=/Game/Blueprints/Pickups/PinkPickup_ActorRESPAWNABLE1
-MRUItem7=/Game/Sewer/gatee
-MRUItem8=/Game/Elevatorlift
-MRUItem9=/Game/Castle/Cannon
-MRUItem10=/Game/Wall
-MRUItem11=/Game/lambert8
-MRUItem12=/Game/Sounds/FX/FX_PaverStep_R
-MRUItem13=/Game/Sounds/FX/FX_PaverStep_L
-MRUItem14=/Game/Materials/PM_Paver
-MRUItem15=/Game/Bridge/materials/lambert2
-MRUItem16=/Game/Drawbridge/lambert25
-MRUItem17=/Game/Materials/Mat_Island6
-MRUItem18=/Game/Materials/Mat_Island5
-MRUItem19=/Game/StarterContent/Materials/M_CobbleStone_Smooth
+MRUItem0=/Game/Gnome_Animated/FallGnome/Fall_Gnome
+MRUItem1=/Game/Dialogue/DialogueWidget
+MRUItem2=/Game/BubbleGang/Boys/ManBPs/BubbleMan_BP
+MRUItem3=/Game/Levels/Bubbleopolis
+MRUItem4=/Game/Castle/Cannonball
+MRUItem5=/Game/Player/ThirdPersonCharacter
+MRUItem6=/Game/Castle/CannonCastle
+MRUItem7=/Game/Levels/Castle
+MRUItem8=/Game/Levels/Forest
+MRUItem9=/Game/Blueprints/Pickups/PinkPickup_Actor
+MRUItem10=/Game/Blueprints/Pickups/PinkPickup_ActorRESPAWNABLE1
+MRUItem11=/Game/Sewer/gatee
+MRUItem12=/Game/Elevatorlift
+MRUItem13=/Game/Castle/Cannon
+MRUItem14=/Game/Wall
+MRUItem15=/Game/lambert8
+MRUItem16=/Game/Sounds/FX/FX_PaverStep_R
+MRUItem17=/Game/Sounds/FX/FX_PaverStep_L
+MRUItem18=/Game/Materials/PM_Paver
+MRUItem19=/Game/Bridge/materials/lambert2
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -3191,17 +3190,30 @@ ChildActorComponent.ComponentTick=True
 ChildActorComponent.ComponentReplication=True
 ChildActorComponent.Events=True
 Cannonball_C.Tick=True
+K2Node_Message.Graph=True
+WidgetInteractionComponent.Variable=True
+WidgetInteractionComponent.TransformCommon=True
+WidgetInteractionComponent.Sockets=True
+WidgetInteractionComponent.Interaction=True
+WidgetInteractionComponent.Debugging=True
+WidgetInteractionComponent.ComponentTick=True
+WidgetInteractionComponent.Rendering=True
+WidgetInteractionComponent.Tags=True
+WidgetInteractionComponent.ComponentReplication=True
+WidgetInteractionComponent.Activation=True
+WidgetInteractionComponent.Cooking=True
+WidgetInteractionComponent.Events=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
 Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-ThirdPersonCharacter_C=
+ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Character=
+Character="\"Object.Default.Destinations\" \"Object.Default.BlackTextElliot\" \"Object.Default.BlackNPCText\" \"Object.Default.ColorTextElliot\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Pawn=
+Pawn="\"Object.Default.Destinations\" \"Object.Default.BlackTextElliot\" \"Object.Default.BlackNPCText\" \"Object.Default.ColorTextElliot\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
@@ -3243,7 +3255,7 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -3305,7 +3317,7 @@ PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" 
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
 MusicBP_C=
 Bubbleopolis_C=
-Fall_Gnome_C="\"Object.Default.BlackNPCText\" \"Object.Default.ColorTextElliot\" \"Object.Default.BlackTextElliot\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
+Fall_Gnome_C="\"Object.Default.Destinations\" \"Object.Default.BlackNPCText\" \"Object.Default.ColorTextElliot\" \"Object.Default.BlackTextElliot\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
 PaperSpriteComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 TextRenderComponent="\"Object.Lighting.LightingChannels\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -3341,7 +3353,7 @@ PawnMovementComponent=
 NavMovementComponent=
 MovementComponent=
 BubbleMan_Anim_C=
-BubbleMan_BP_C="\"Object.Default.Destinations\" "
+BubbleMan_BP_C="\"Object.Default.Destinations\" \"Object.Default.BlackTextElliot\" \"Object.Default.BlackNPCText\" \"Object.Default.ColorTextElliot\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
 DialogueGetLine_6=
 DialogueGetLine=
 BubbleBoy_Anim_C=
@@ -3939,6 +3951,7 @@ None=======
 /Game/Elevatorlift.ElevatorLift=1
 /Game/Blueprints/Pickups/PinkPickup_ActorRESPAWNABLE1.PinkPickup_ActorRESPAWNABLE1=1
 /Game/Blueprints/Pickups/PinkPickup_Actor.PinkPickup_Actor=1
+/Game/Castle/Cannonball.Cannonball=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -5594,9 +5607,9 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Castle
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/Castle
+MRUItem2=/Game/Levels/Forest
 MRUItem3=/Game/Levels/NewSewer
 MRUItem4=/Game/Levels/MainMenu
 MRUItem5=/Game/Levels/PersistentLevel
@@ -5609,7 +5622,7 @@ MRUItem11=/Game/Levels/testYellow
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LoadErrors
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -6001,7 +6014,7 @@ Mush4_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Renderi
 Music_BG_Actor_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 MusicBP_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,
 Bubbleopolis_C=
-Fall_Gnome_C=
+Fall_Gnome_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 LoadingScreen_C=
 MulticastInlineDelegatePropertyWrapper=MulticastInlineDelegatePropertyWrapper.DelegateInputs.InputArgument0,
 MyGameInstance_C=
@@ -6027,7 +6040,7 @@ Ladder_BP_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Ren
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 BubbleMan_Anim_C=
 Chef_Ani_C=
-BubbleMan_BP_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
+BubbleMan_BP_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 BubbleBoy_Anim_C=
 BubbleBoy_BP_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Fall_Gnome_C.Physics.ConstraintsGroup,
 DialogueCreate_5=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
@@ -6054,6 +6067,7 @@ ElevatorLift_C=
 CannonCastle_C=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Gnome_Animated/FallGnome/Fall_Gnome.Fall_Gnome;
 RecentlyPlaced=/Game/Castle/CannonCastle.CannonCastle;
 RecentlyPlaced=/Game/Blueprints/Pickups/PinkPickup_Actor.PinkPickup_Actor;
 RecentlyPlaced=/Game/Blueprints/Pickups/PinkPickup_ActorRESPAWNABLE1.PinkPickup_ActorRESPAWNABLE1;
@@ -6073,7 +6087,6 @@ RecentlyPlaced=/Game/BubbleopolisBPs/BlueCamera.BlueCamera;
 RecentlyPlaced=/Game/BubbleopolisBPs/RedCamera.RedCamera;
 RecentlyPlaced=/Game/BubStair.BubStair;
 RecentlyPlaced=/Game/BubbleopolisBPs/MagCamera.MagCamera;
-RecentlyPlaced=/Game/BubbleopolisBPs/GreenCamera.GreenCamera;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
