Knight new Anim
Knight new Anim

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -219,26 +219,26 @@ CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Gnome_Animated/FallGnome/Fall_Gnome
-MRUItem1=/Game/Dialogue/DialogueWidget
-MRUItem2=/Game/BubbleGang/Boys/ManBPs/BubbleMan_BP
-MRUItem3=/Game/Levels/Bubbleopolis
-MRUItem4=/Game/Castle/Cannonball
-MRUItem5=/Game/Player/ThirdPersonCharacter
-MRUItem6=/Game/Castle/CannonCastle
-MRUItem7=/Game/Levels/Castle
-MRUItem8=/Game/Levels/Forest
-MRUItem9=/Game/Blueprints/Pickups/PinkPickup_Actor
-MRUItem10=/Game/Blueprints/Pickups/PinkPickup_ActorRESPAWNABLE1
-MRUItem11=/Game/Sewer/gatee
-MRUItem12=/Game/Elevatorlift
-MRUItem13=/Game/Castle/Cannon
-MRUItem14=/Game/Wall
-MRUItem15=/Game/lambert8
-MRUItem16=/Game/Sounds/FX/FX_PaverStep_R
-MRUItem17=/Game/Sounds/FX/FX_PaverStep_L
-MRUItem18=/Game/Materials/PM_Paver
-MRUItem19=/Game/Bridge/materials/lambert2
+MRUItem0=/Game/Knight/KnightBlend
+MRUItem1=/Game/Gnome_Animated/FallGnome/Fall_Gnome
+MRUItem2=/Game/Dialogue/DialogueWidget
+MRUItem3=/Game/BubbleGang/Boys/ManBPs/BubbleMan_BP
+MRUItem4=/Game/Levels/Bubbleopolis
+MRUItem5=/Game/Castle/Cannonball
+MRUItem6=/Game/Player/ThirdPersonCharacter
+MRUItem7=/Game/Castle/CannonCastle
+MRUItem8=/Game/Levels/Castle
+MRUItem9=/Game/Levels/Forest
+MRUItem10=/Game/Blueprints/Pickups/PinkPickup_Actor
+MRUItem11=/Game/Blueprints/Pickups/PinkPickup_ActorRESPAWNABLE1
+MRUItem12=/Game/Sewer/gatee
+MRUItem13=/Game/Elevatorlift
+MRUItem14=/Game/Castle/Cannon
+MRUItem15=/Game/Wall
+MRUItem16=/Game/lambert8
+MRUItem17=/Game/Sounds/FX/FX_PaverStep_R
+MRUItem18=/Game/Sounds/FX/FX_PaverStep_L
+MRUItem19=/Game/Materials/PM_Paver
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -3201,6 +3201,15 @@ WidgetInteractionComponent.ComponentReplication=True
 WidgetInteractionComponent.Activation=True
 WidgetInteractionComponent.Cooking=True
 WidgetInteractionComponent.Events=True
+BlendSpace1D.InputInterpolation=True
+BlendSpace1D.Axis Settings=True
+BlendSpace1D.AdditiveSettings=True
+BlendSpace1D.BlendSamples=True
+BlendSpace1D.Animation=True
+BlendSpace1D.SampleInterpolation=True
+BlendSpace1D.AnimationNotifies=True
+BlendSpace1D.MetaData=True
+BlendSpace1D.Thumbnail=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -3950,6 +3959,7 @@ None=======
 /Game/Blueprints/Pickups/PinkPickup_ActorRESPAWNABLE1.PinkPickup_ActorRESPAWNABLE1=1
 /Game/Blueprints/Pickups/PinkPickup_Actor.PinkPickup_Actor=1
 /Game/Castle/Cannonball.Cannonball=1
+/Game/Knight/KnightBlend.KnightBlend=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -5964,7 +5974,7 @@ BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 AssetViewerSettings=AssetViewerSettings.Settings.PostProcessing,AssetViewerSettings.Settings.Rendering Features,
 PersonaPreviewSceneDescription=AssetViewerSettings.Settings.PostProcessing,AssetViewerSettings.Settings.Rendering Features,
-PreviewMeshCollection=
+PreviewMeshCollection=AssetViewerSettings.Settings.PostProcessing,AssetViewerSettings.Settings.Rendering Features,
 Player_BP_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 MovableLog_C=
 Tree2Movable_C=
