--- a/Sero_4.26/Serotopia_Grey_1 4.26/Config/DefaultEngine.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Config/DefaultEngine.ini
@@ -94,6 +94,7 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType1,Name="Grass")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="Paver")
++PhysicalSurfaces=(Type=SurfaceType3,Name="Water")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 MinDeltaVelocityForHitEvents=0.000000
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
