--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -205,7 +205,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Castle
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -216,28 +216,29 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/TowerInterior.TowerInterior
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Stool/RoundedStool
-MRUItem1=/Game/Sack/Meshes/StandingSack_Mat
-MRUItem2=/Game/Sack/Meshes/SittingSack_Mat
-MRUItem3=/Game/Sack/Meshes/Sitting_Sack
-MRUItem4=/Game/Sack/Meshes/Standing_Sack
-MRUItem5=/Game/ThroneRoomFireplace/Outer_Railing
-MRUItem6=/Game/ThroneRoomFireplace/Middle_Rail_Piece
-MRUItem7=/Game/ThroneRoomFireplace/Inner_Fireplace
-MRUItem8=/Game/ThroneRoomFireplace/Fireplace_Main
-MRUItem9=/Game/Cannon/Cannon_Textures/Cannon_Mat2
-MRUItem10=/Game/Cannon/Cannon_Textures/Cannon_Mat1
-MRUItem11=/Game/Cannon/Cannon_Textures/NewMaterial
-MRUItem12=/Game/Castle/CannonCastle
-MRUItem13=/Game/Castle/Cannon_LP__1_
-MRUItem14=/Game/King_Model/Mesh/lambert3
-MRUItem15=/Game/King_Model/Mesh/lambert1
-MRUItem16=/Game/Knight/Dizzy_Idle_Anim_mixamo_com
-MRUItem17=/Game/Knight/Dizzy_Idle
-MRUItem18=/Game/Knight/lambert1
-MRUItem19=/Game/Knight/lambert2
+MRUItem0=/Game/TowerInterior
+MRUItem1=/Game/Stool/RoundedStool
+MRUItem2=/Game/Sack/Meshes/StandingSack_Mat
+MRUItem3=/Game/Sack/Meshes/SittingSack_Mat
+MRUItem4=/Game/Sack/Meshes/Sitting_Sack
+MRUItem5=/Game/Sack/Meshes/Standing_Sack
+MRUItem6=/Game/ThroneRoomFireplace/Outer_Railing
+MRUItem7=/Game/ThroneRoomFireplace/Middle_Rail_Piece
+MRUItem8=/Game/ThroneRoomFireplace/Inner_Fireplace
+MRUItem9=/Game/ThroneRoomFireplace/Fireplace_Main
+MRUItem10=/Game/Cannon/Cannon_Textures/Cannon_Mat2
+MRUItem11=/Game/Cannon/Cannon_Textures/Cannon_Mat1
+MRUItem12=/Game/Cannon/Cannon_Textures/NewMaterial
+MRUItem13=/Game/Castle/CannonCastle
+MRUItem14=/Game/Castle/Cannon_LP__1_
+MRUItem15=/Game/King_Model/Mesh/lambert3
+MRUItem16=/Game/King_Model/Mesh/lambert1
+MRUItem17=/Game/Knight/Dizzy_Idle_Anim_mixamo_com
+MRUItem18=/Game/Knight/Dizzy_Idle
+MRUItem19=/Game/Knight/lambert1
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -3487,7 +3488,7 @@ Waterblock_C.Default=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object=
+Object="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" \"Object.Actor.PivotOffset\" "
@@ -3531,7 +3532,7 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush=
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
@@ -3542,7 +3543,7 @@ SceneComponent=
 ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
-StaticMeshActor=
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 PlayerCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
@@ -3558,14 +3559,14 @@ SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.B
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 SkeletalMesh=
-StreamableRenderAsset=
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 LODInfoUILayout=
 SkeletalBodySetup="\"Object.AggGeom\" \"Object.AggGeom.SphylElems\" \"Object.AggGeom.SphylElems.SphylElems[0]\" \"Object.AggGeom.SphylElems.SphylElems[0].Rotation\" \"Object.WalkableSlopeOverride\" \"Object.DefaultInstance.WalkableSlopeOverride\" "
 BodySetup=
 BodySetupCore=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-StaticMesh=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Material.ScalarParameters.ScalarParameters[1]\" \"Object.Material.ScalarParameters.ScalarParameters[2]\" "
 AnimGraphNode_SequencePlayer="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_AssetPlayerBase="\"Object.Settings.SyncGroup\" "
@@ -4368,7 +4369,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=214.000 Y=35.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1645.000 Y=1009.000
+WindowSize=X=1650.000 Y=1014.000
 None=======
 InitiallyMaximized=True
 
@@ -4387,7 +4388,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=C:/Users/jbdav/Documents/GitHub/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -5958,9 +5959,9 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Castle
-MRUItem1=/Game/Levels/NewSewer
-MRUItem2=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/Castle
+MRUItem2=/Game/Levels/NewSewer
 MRUItem3=/Game/Levels/Bubbleopolis
 MRUItem4=/Game/Levels/MainMenu
 MRUItem5=/Game/Levels/PersistentLevel
@@ -5973,7 +5974,7 @@ MRUItem11=/Game/Levels/testYellow
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -6297,7 +6298,7 @@ PlayerStart=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Ren
 InstancedFoliageActor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 PinkPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SkeletalMesh=
-BrushComponent=
+BrushComponent=StaticMeshActor.Rendering.LOD,
 Skybox_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,StaticMeshActor.Rendering.LOD,
 SceneFinish_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
